<?xml version="1.0" encoding="utf-8"?><!--
    ~ Copyright 2023 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<resources>
    <string name="app_name">FlexiPose</string>

    <string name="media_pipe">MediaPipe</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum pose results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing
        maximum pose results button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of pose detect results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of pose detect results button</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the pose landmarker.</string>

    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_pose_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_pose_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_pose_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_num_poses">Number of Poses</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">Model</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>Pose Landmarker Full</item>
        <item>Pose Landmarker Lite</item>
        <item>Pose Landmarker Heavy</item>
    </string-array>


    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up_patient">SIGN UP AS PATIENT</string>
    <string name="sign_in_patient">SIGN IN AS PATIENT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_doctor">SIGN UP AS DOCTOR</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your email id and password, to login with us.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="tv_already_signed_up">Already signed up?</string>
    <string name="tv_create_account">Create account</string>
    <string name="btn_done_exercise">Done</string>
    <string name="menu_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--TODO (Step 9: All the string values are added here.)-->
    <!--START-->
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="nav_my_progress">My Progress</string>
    <string name="drawer_username">Username</string>
    <!--END-->

    <!--TODO (Step 6: All dimen values are added here.)-->
    <!--START-->
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>
    <string name="reps_count">Reps: 0</string>
    <string name="angle_count">Angle: 0°</string>
    <string name="tv_elbow_exercise">Elbow Exercise</string>
    <string name="tv_knee_exercise">Knee Exercise</string>
    <string name="tv_shoulder_exercise">Shoulder Exercise</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_i_am_doctor">I AM DOCTOR</string>
    <string name="rb_tv_patient">Patient</string>
    <string name="rb_tv_doctor">Doctor</string>
    <string name="tv_dr_name">Dr. Name</string>
    <string name="tv_dr_age">Age</string>
    <string name="search_patient">SearchPatientIcon</string>
    <string name="tv_search_patient">Patient List</string>
    <string name="patient_name_list_in_cv">Name</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="sign_in_doctor">SIGN IN AS DOCTOR</string>
    <string name="navigate_to_intro">navigate to intro</string>
    <string name="app_logo">app_logo</string>
    <string name="search_patients">Search patients...</string>
    <string name="patient_list">Patient List</string>
    <string name="search_for_patients">Search for patients...</string>
    <!--END-->

</resources>
