<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context=".activities.doctor.DoctorSignUpActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="horizontal"
        android:background="@drawable/top_background">

        <ImageView
            android:id="@+id/ic_nav_to_intro_page"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_arrow_back_left_full_24"
            android:layout_marginTop="35dp"
            android:layout_marginStart="15dp"
            android:clickable="true"
            android:contentDescription="@string/navigate_to_intro"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"/>

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/app_logo_full"
            android:contentDescription="@string/app_logo" />

        <!--        <ImageView-->
        <!--            android:id="@+id/app_logo"-->
        <!--            android:layout_width="130dp"-->
        <!--            android:layout_height="130dp"-->
        <!--            android:layout_gravity="center_horizontal"-->
        <!--            android:layout_marginStart="78dp"-->
        <!--            android:background="@drawable/flexi_pose_logo"-->
        <!--            android:contentDescription="@string/app_logo" />-->

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_doctor_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="176dp"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/sign_up_doctor"
                    android:textColor="#09AEAE"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </TextView>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_doctor_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_doctor_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_doctor_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/btn_doctor_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/btn_marginStartEnd"
                    android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                    android:layout_marginEnd="@dimen/btn_marginStartEnd"
                    android:background="@drawable/button"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_text_size" />

                <TextView
                    android:id="@+id/tv_doctor_already_has_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_already_signed_up"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="@dimen/auth_text_padding"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginTop="600dp"
        android:gravity="center"
        android:text="@string/sign_up_description_text"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/authentication_description_text_size" />


</RelativeLayout>