<?xml version="1.0" encoding="utf-8"?>
<!--TODO (Step 2: Create a content_main xml file.)-->
<!--START-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bottom_sheet_peek_height">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_elbow_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardElevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            android:textAlignment="center"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/tv_elbow_exercise"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_knee_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardElevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            android:textAlignment="center"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/card_elbow_exercise"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/tv_knee_exercise"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_shoulder_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardElevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            android:textAlignment="center"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/card_knee_exercise"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/tv_shoulder_exercise"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
    <!--END-->
